Restructuring web app code
Created the HTML structure, created the home class in JS that manages the HTML

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "cssnano": "^4.1.10",
     "sass": "^1.23.7"
+  },
+  "dependencies": {
+    "lit-html": "^1.1.2"
   }
 }
