--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,6 @@
     "node-sass": "^4.13.0",
     "sirv-cli": "^0.4.4",
     "svelte-preprocess": "^3.3.0",
-    "svelte-routing": "^1.4.0"
+    "svelte-spa-router": "^2.0.0"
   }
 }
