--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "firebase": "^7.13.0",
     "node-sass": "^4.13.0",
     "sirv-cli": "^0.4.4",
     "svelte-preprocess": "^3.3.0",
