--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^8.10.0",
     "request": "^2.88.0"
   }
 }
